6.0
	+ Set version to 6.0
5.1.1
	+ Set hidden property on manual field
	+ Remove Log & Block decision as suricata only matches first rule
5.1
	+ Update suricata conf stub with default values from Ubuntu 16.04
	+ Improved daemon management and firewall integration
	+ Use NFQUEUE=0 by default, overrideable with ips_nfqueue confkey
	+ Remove deprecated logs consolidate and rules update code
	+ Remove deprecated 'Source' field in rules table
5.0
	+ Use TryCatch instead of TryCatch::Lite
	+ Merge PR to make it work in 5.0 by eduardogoncalves
	+ Removed deprecated commercial message
3.5
	+ Set version to 3.5
3.4
	+ Ignore bond slaves when looking for enabled interfaces
	  (contribution by Vsevolod Kukol)
	+ Depend on new tcmalloc version in saucy
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Removed old migration code from 3.0 to 3.2
	+ Set version to 3.3
	+ Update strings to new offering
3.2
	+ Set version to 3.2
3.1.8
	+ Override daemons when migrating from 3.0
3.1.7
	+ Do not run ids migration if upgrading from ips
3.1.6
	+ Migrate ids data from 3.0
3.1.5
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report table now can be paginated
	+ Summarised report has breadcrumbs now
	+ Replace zentyal-ids in debian/control for easier upgrade
3.1.4
	+ Rules model now has a checkbox to enable/disable all
3.1.3
	+ Added menu icon
	+ Explicitly set firewall version dependency in control file
	+ Set inline firewall rules position and mode based on
	  ips_fw_position configuration key
	+ Configure accept mode to let Suricata accept or drop the traffic
	+ Set inline firewall rules unless the module is temporary stopped
3.1.2
	+ Added ips_rule_updates to manage when IPS rule set is updated
	+ Change IPS rule management with ASU adding new fields
	  to Rules model to identify source and autoconfiguration
	+ Added rule set file management to module API
3.1.1
	+ Fix NFQUEUE clashing with l7filter in trafficshaping module