@@ -8,4 +8,8 @@ modprobe nfnetlink_queue
 touch /var/log/suricata/fast.log
 chgrp adm /var/log/suricata/fast.log
 
+# workaround for broken systemd service, enforce use of init.d script
+rm -f /lib/systemd/system/suricata.service
+systemctl daemon-reload
+
 exit 0
