@@ -1,3 +1,5 @@
+HEAD
+	+ Enforce use of suricata init.d script as systemd service is broken
 6.0
 	+ Set version to 6.0
 5.1.1
